# KattisProblems

./: .gitignore  A1Paper.cpp  CMakeLists.txt  README.md  jonnyTemplate.cpp  jonnyTemplate.cpp~  jonny_template_nac22.h  lostMap.cpp  lostMap2.cpp  singleSourceNegativeWeights.cpp
MSOE2020/: 01Sequences.cpp  01Sequences2.cpp  ACMScoringContest.cpp  LaptopSticker.cpp  MatrixInverse.cpp  WaifUntilDark.cpp  treehouses.cpp
MSOE2021Fall/RMRC2015/: ClassyProblem.cpp  IveBeenEverywhereMan.cpp  MatrixKeypad.cpp  PopularVote.cpp  ScalingRecipes.cpp  TheMagical3.cpp
MSOE2021Fall/Week1/: BadPacking.cpp  DominatingDuos.cpp  MagicTrick.cpp  MissingNumber.cpp  NoThanks.cpp  RatingProblems.cpp  SmoothieStand.cpp  TriangularCollection.cpp  UnreadMessages.cpp  UnreadMessages2.cpp
MSOE2021Fall/Week5/: Stopwatch.cpp
MSOE2021Fall/Week6/: FantasyDraft.cpp  FoldingACube.cpp  Hogwarts.cpp  IntegerDivision.cpp  LostLineup.cpp  PieceOfCake.cpp  TheBiggestTriangle.cpp  TiredTerry.cpp
MSOE2021Fall/Week7/: HIndex.cpp  NeighborhoodWatch.cpp  QualityAdjustedLifeYear.cpp  SmallSchedule.cpp
MSOE2021Fall/Week8/: QuiteAProblem.cpp
MSOE2021Summer/NAPCPracticeContest_Jul10/: BabelFisch.cpp  BrickWall.cpp  DisastrousDoubling.cpp  DisastrousDoubling.py  EatingOut.cpp  FlightPlans.cpp  PrimalRepresentation.cpp
MSOE2021Summer/NAPCPracticeContest_Jul17/: JugglingTroupe.cpp  Mathemagicians.cpp  TimeIsMoney.cpp
MSOE2021Summer/NAPCPracticeContest_Jul25/: MaximalSequences.cpp  MaximalSequences2.cpp  Totem.cpp
MSOE2021Summer/NAPCPracticeContest_Jul31/: Candyland.cpp
MSOE2021Summer/NSAChallenge/: L2.cpp
MSOE2021Summer/Week1/: CarVet.cpp  Difference.cpp  PearWiseVoting.cpp  PunctiliousCruciverbalist.cpp  RandomProblem.cpp  RomanHolidays.cpp  ToursDeSalesForce.cpp
MSOE2021Summer/Week10/: ArrayOfDiscord.cpp  CoinStacks.cpp  DamsInDistress.cpp  InfectionEstimation.cpp  MethodMultiplication.py
MSOE2021Summer/Week11/: AlphabetAnimals.cpp  EenyMeeny.cpp  EenyMeeny.py  HotHike.py
MSOE2021Summer/Week2/: AquariumTank.cpp  ContinuedFraction.cpp  Eligbility.java  FacilityLocations.cpp  LandlineTelephoneNetwork.cpp  LandlineTelephoneNetwork2.cpp  LockedTreasure.cpp  LockedTreasure.py  PlaneTicketPricing.cpp  RepeatedSubstrings.cpp  RestaurantRatings.cpp  Server.cpp  YesSatisfiabilityAgain.java
MSOE2021Summer/Week3/: BumperToBumperTraffic.cpp  DeliveringGoods.cpp  Election.cpp  FizzBuzz.cpp  FlowShop.cpp  FlowShop2.cpp  FlowShop3.cpp  PasswordHacking.cpp  StackingCups.java
MSOE2021Summer/Week4/: DecisionsDecisions.cpp  FlowFree.cpp  FroshWeek.cpp  HeartRate.cpp  HissingMicrophone.cpp  Initials.cpp  MaxFlow.cpp  MulitplicationGame.cpp  MultiplicationGame.cpp  OpenPitMining.cpp  OpenPitMining2.cpp  OpenPitMining3.cpp  PalindromicPassword.cpp  PolylineSimplification.cpp
MSOE2021Summer/Week5/: BioTrip.cpp  BioTrip2.cpp  JustPassingThrough.cpp  MusicalChairs.cpp  Retribution.cpp  TaxedEditor.cpp
MSOE2021Summer/Week6/: DeleteThis.cpp  KenKenYouDoIt.cpp  Rings.cpp  SquawkVirus.cpp  SquawkVirus.py  TransportationDelegation.cpp  TrayBien.cpp  WhatsOnTheGrille.cpp
MSOE2021Summer/Week7/: 4Thought.cpp  4Thought.py  BiggestSlice.cpp  ErraticAnts.cpp  EvenUpSolitaire.cpp  GoldbachsConjecture.cpp  IslandBuses.cpp  Oddities.cpp  PlottingPolynomials.cpp  ShotCube.cpp  ShotCube2.cpp  ShotCube3.cpp  TernarianWeights.cpp  TernarianWeights2.cpp  TernarianWeights3.cpp  TrapezoidWalkway.cpp
MSOE2021Summer/Week8/: Tourists.cpp  Tourists2.cpp
MSOE2021Summer/Week9/: FlashingFluorescents.cpp  MissingGnomes.cpp  MissingGnomes2.cpp  ProbeDroids.cpp  ZoningHouses.cpp
MSOE2022Fall/BuckeyeProgrammingComp/: EightBitTollRoad.cpp
MSOE2022Fall/CodeTON3/: A.cpp  B.cpp  C.cpp  D.cpp
MSOE2022Fall/Codeforces833/: A.cpp  B.cpp  C.cpp
MSOE2022Fall/W2/: bossbattle.cpp  cuttingcorners.cpp  peragrams.cpp  zipflaw.cpp
MSOE2022Fall/W3/: chewbacca.cpp  marblesonatree.cpp  numbersonatree.cpp
MSOE2022Fall/W4/: dungeonmaster.cpp  grid.cpp  weakvertices.cpp  wheresmyinternet.cpp
MSOE2022Spring/ECNA_2021/: B.cpp  G.cpp
MSOE2022Spring/MCPC21/: AverageCharacter.kt  B_.kt  C_.kt  D.kt  DisjointMinTable.cpp  DoublePassword.cpp  F_.kt  G.kt  H.cpp  I.cpp  I.kt  I_.kt  J_.kt  K.kt  WhoGoesThere.cpp  main.cpp
MSOE2022Spring/MSOE_CP_DP/: A.cpp  B.cpp  C.cpp  D.cpp
MSOE2022Spring/NAC2022_Practice3/: ConquestCampaign.cpp  HydraHeads.cpp
MSOE2022Spring/NAC2022_Practice5/: ClockPictures.cpp  DiceGame.cpp  HowManySquares.cpp  OpeningCeremony.cpp  Outing.cpp  TrainPassengers.cpp
MSOE2022Spring/NAC2022_Practice5_Plane/: HowManySquares.cpp  HowManySquaresTLE.cpp
MSOE2022Spring/NAC22/: ContactTracing.cpp  RaftingTrip.cpp  Reset.cpp  TicTacToeCounting.cpp  WordLadder.cpp
MSOE2022Spring/NAC_2020/: Hopscotch50.cpp  LetterWheels.cpp  LetterWheels2.cpp  MiniBattleship.cpp
MSOE2022Spring/NWERC_2020/: C.cpp  D.cpp  E.cpp  H.cpp  I.cpp  K.cpp
MSOE2022Spring/Other/: ThreeBlueOneBrownVid.cpp
MSOE2022Spring/RMRC2021/: E.cpp  N.cpp
MSOE2022Summer/RandomProblems/: 01Sequences.cpp  Accounting.cpp  EightQueens.cpp  competitiveprogrammer.cpp  savingtheuniverse.cpp
MSOE2022Winter/BAPC2013/: BAPC2013_A.cpp  BAPC2013_B.cpp  BAPC2013_C.cpp  BAPC2013_D.cpp  BAPC2013_F.cpp  BAPC2013_I.cpp
MSOE2022Winter/BAPC2021/: BAPC2021_A.cpp  BAPC2021_B.cpp  BAPC2021_C.cpp  BAPC2021_F.cpp  BAPC2021_I.cpp
MSOE2022Winter/NAQ2019/: CircuitMath.cpp  DiagonalCut.cpp  Gerrymandering.cpp  MissingNumbers.cpp  ResearchProductivityIndex.cpp  StopCounting.cpp  SummerTrip.cpp  Zipline.cpp
MSOE2022Winter/NAQ2021/: C2_NAQ2021.cpp  C_NAQ2021.cpp  F_NAQ2021.cpp  G_NAQ2021.cpp  H_NAQ2021.cpp  L_NAQ2021.cpp
MSOE2022Winter/NCNA_2021/: NCNA_2021_A.cpp  NCNA_2021_B.cpp  NCNA_2021_BSlow.cpp  NCNA_2021_C.cpp  NCNA_2021_D.cpp  NCNA_2021_E.cpp  NCNA_2021_F.cpp  NCNA_2021_G.cpp  NCNA_2021_H.cpp  NCNA_2021_I.cpp  NCNA_2021_J.cpp  NCNA_2021_K.cpp  (+3 more)
MSOE2023Spring/: Beacons.cpp  NatureReserve.cpp  RoyAndCoinBoxes.cpp  SlideCount.cpp
MSOE2023Winter/: 01Sequences.cpp  Bribe.cpp  ChainReactions.cpp  EvenUpSolitaire.cpp  IntegerDivision.cpp  LostLineup.cpp  NoThanks.cpp  PieceOfCake.cpp
(+74 files in other folders)
